--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ php:
   - "7.0"
   - hhvm
 
-install:
-  composer install
+before_script:
+  - composer self-update
+  - composer install --dev --prefer-source
 
-script: phpunit --configuration phpunit.xml
+script: phpunit --coverage-text
