--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,6 @@
   },
   "scripts" : {
     "test": "vendor/bin/phpunit",
-    "test-coverage": "vendor/bin/phpunit --coverage-clover build/logs/clover.xml",
+    "test-coverage": "vendor/bin/phpunit --coverage-clover build/logs/clover.xml"
   }
 }
